--- a/index.html
+++ b/index.html
@@ -1,75 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIM Genius: Cheats, Mods, & Dev Tools</title>
-    <style>
-        /* General Styling */<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nex Network AI</title>
     <style>
+        /* Reset */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
+        /* General Styling */
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #121212;
-            color: #f1f1f1;
-            text-align: center;
+            background-color: #1a1a1a;
+            color: #f5f5f5;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
             padding: 20px;
         }
 
-        header {
-            margin-bottom: 50px;
-        }
-
         h1 {
-            font-size: 3em;
-            color: #ff3d00;
-            letter-spacing: 1px;
-        }
-
-        .model-selector {
-            margin: 20px 0;
-            font-size: 1.2em;
-            background-color: #333;
+            font-size: 3rem;
             color: #ff9800;
-            padding: 10px;
-            border-radius: 10px;
-            width: 50%;
-            cursor: pointer;
-            border: 2px solid #ff9800;
+            margin-bottom: 20px;
         }
 
-        input[type="text"] {
-            width: 80%;
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+            background: #212121;
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+            margin-top: 20px;
+        }
+
+        .model-selector, .input-field {
+            width: 100%;
+            max-width: 600px;
+            margin: 20px 0;
+        }
+
+        .model-selector select, .input-field input {
+            width: 100%;
             padding: 15px;
-            margin: 20px 0;
-            border-radius: 30px;
-            background-color: #252525;
+            font-size: 1.2em;
+            border-radius: 10px;
+            border: none;
+            background-color: #2c2c2c;
             color: #ff9800;
-            font-size: 1.1em;
-            border: 2px solid #ff9800;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .model-selector select:focus, .input-field input:focus {
+            box-shadow: 0 4px 20px rgba(255, 152, 0, 0.8);
             outline: none;
         }
 
         button {
             background-color: #ff9800;
-            border: none;
             padding: 15px 30px;
-            font-size: 1.1em;
+            border: none;
             border-radius: 30px;
-            cursor: pointer;
+            font-size: 1.1em;
             color: #fff;
+            cursor: pointer;
             transition: background 0.3s ease;
+            margin-top: 20px;
+            width: 200px;
         }
 
         button:hover {
@@ -77,30 +84,39 @@
         }
 
         .output-section {
-            margin-top: 30px;
+            width: 100%;
+            max-width: 800px;
+            margin-top: 40px;
         }
 
-        #textOutput, #imageOutput img {
-            background-color: #2d2d2d;
+        .output-section h2 {
+            color: #ff9800;
+            margin-bottom: 20px;
+        }
+
+        #textOutput, #imageOutput {
+            background-color: #2c2c2c;
             padding: 20px;
-            border-radius: 15px;
-            margin-top: 20px;
-            width: 80%;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
+            border-radius: 10px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+            margin-top: 10px;
         }
 
         #textOutput {
-            color: #ff9800;
-            white-space: pre-wrap;
+            color: #fff;
             font-family: 'Courier New', monospace;
+        }
+
+        #imageOutput img {
+            width: 100%;
+            border-radius: 10px;
         }
 
         footer {
             margin-top: 50px;
-            color: #777;
+            color: #aaa;
             font-size: 0.9em;
+            text-align: center;
         }
 
         footer a {
@@ -108,47 +124,62 @@
             text-decoration: none;
         }
 
+        footer a:hover {
+            text-decoration: underline;
+        }
+
         @media (max-width: 768px) {
-            input[type="text"], button, .model-selector {
-                width: 90%;
+            .container {
+                padding: 15px;
+            }
+
+            button {
+                width: 100%;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            .model-selector select, .input-field input {
+                font-size: 1em;
             }
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>Nex Network AI</h1>
-        <p>Generate text and images with cutting-edge AI models!</p>
-    </header>
+    <h1>Nex Network AI</h1>
 
-    <div>
-        <select class="model-selector" id="modelSelector">
-            <option value="gpt">GPT-4</option>
-            <option value="stable_diffusion">Stable Diffusion</option>
-            <option value="dalle">DALL·E</option>
-        </select>
-    </div>
+    <div class="container">
+        <div class="model-selector">
+            <select id="modelSelector">
+                <option value="gpt">GPT-4</option>
+                <option value="stable_diffusion">Stable Diffusion</option>
+                <option value="dalle">DALL·E</option>
+            </select>
+        </div>
 
-    <input type="text" id="userPrompt" placeholder="Enter your prompt here...">
+        <div class="input-field">
+            <input type="text" id="userPrompt" placeholder="Enter your prompt...">
+        </div>
 
-    <div>
         <button onclick="generateText()">Generate Text</button>
         <button onclick="generateImage()">Generate Image</button>
-    </div>
 
-    <div class="output-section">
-        <h2>Text Output</h2>
-        <div id="textOutput"></div>
-    </div>
+        <div class="output-section">
+            <h2>Text Output</h2>
+            <div id="textOutput"></div>
+        </div>
 
-    <div class="output-section">
-        <h2>Image Output</h2>
-        <div id="imageOutput"></div>
+        <div class="output-section">
+            <h2>Image Output</h2>
+            <div id="imageOutput"></div>
+        </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 Nex Network AI. All rights reserved.</p>
+        <p>&copy; 2024 Nex Network AI. All Rights Reserved.</p>
         <p><a href="/tos">Terms of Service</a> | <a href="/privacy">Privacy Policy</a> | <a href="/contactus">Contact Us</a></p>
     </footer>
 
@@ -157,7 +188,7 @@
             const prompt = document.getElementById('userPrompt').value;
             const model = document.getElementById('modelSelector').value;
 
-            fetch(`/generate_text`, {
+            fetch('/generate_text', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ prompt, model })
@@ -172,320 +203,17 @@
             const prompt = document.getElementById('userPrompt').value;
             const model = document.getElementById('modelSelector').value;
 
-            fetch(`/generate_image`, {
+            fetch('/generate_image', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ prompt, model })
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById('imageOutput').innerHTML = `<img src="${data.image_url}" alt="Generated Image" style="width: 100%;">`;
+                document.getElementById('imageOutput').innerHTML = `<img src="${data.image_url}" alt="Generated Image">`;
             });
         }
     </script>
 
 </body>
-</html>
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: #0f0f0f;
-            color: #f5f5f5;
-            line-height: 1.6;
-        }
-
-        a {
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        /* Header */
-        header {
-            background: linear-gradient(135deg, #1a1a1a, #2e2e2e);
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 2.8em;
-            color: #f39c12;
-            margin-bottom: 5px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            margin-top: 10px;
-            flex-wrap: wrap;
-        }
-
-        nav ul li {
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: #f5f5f5;
-            font-size: 1.1em;
-            padding: 8px 20px;
-            border-radius: 25px;
-            font-weight: 500;
-        }
-
-        nav ul li a:hover {
-            background-color: #f39c12;
-            color: #0f0f0f;
-        }
-
-        /* Hero Section */
-        .hero {
-            background: url('https://source.unsplash.com/1600x600/?gaming') no-repeat center center/cover;
-            height: 60vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            border-bottom: 2px solid #f39c12;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.6);
-        }
-
-        .hero h2 {
-            font-size: 2.8em;
-            color: #f5f5f5;
-            z-index: 1;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-            text-align: center;
-            margin: 0;
-        }
-
-        /* Section Styling */
-        .section {
-            padding: 80px 20px;
-            text-align: center;
-        }
-
-        .section h2 {
-            font-size: 2.5em;
-            margin-bottom: 40px;
-            color: #f39c12;
-        }
-
-        .section p {
-            font-size: 1.1em;
-            color: #c2c2c2;
-            margin-bottom: 40px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .cards {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            flex-wrap: wrap;
-        }
-
-        .card {
-            background-color: #1f1f1f;
-            width: 350px;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-            transition: transform 0.3s ease;
-            margin-bottom: 20px;
-        }
-
-        .card:hover {
-            transform: translateY(-10px);
-        }
-
-        .card h3 {
-            color: #f39c12;
-            margin-bottom: 20px;
-            font-size: 1.6em;
-        }
-
-        .card p {
-            color: #b5b5b5;
-        }
-
-        /* Search Bar */
-        .search-bar {
-            margin-top: 60px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .search-bar input {
-            padding: 15px;
-            width: 400px;
-            border-radius: 30px;
-            border: none;
-            font-size: 1em;
-            outline: none;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .search-bar input:focus {
-            box-shadow: 0 4px 20px rgba(243, 156, 18, 0.8);
-        }
-
-        /* Footer */
-        footer {
-            background-color: #1f1f1f;
-            color: #bbb;
-            text-align: center;
-            padding: 30px 20px;
-            margin-top: 50px;
-        }
-
-        footer p {
-            margin-bottom: 10px;
-            font-size: 1em;
-        }
-
-        footer a {
-            color: #f39c12;
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 25px;
-            background-color: #333;
-            margin: 0 10px;
-        }
-
-        footer a:hover {
-            background-color: #f39c12;
-            color: #0f0f0f;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2.2em;
-            }
-
-            .hero h2 {
-                font-size: 2.2em;
-            }
-
-            .cards {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .card {
-                width: 90%;
-            }
-
-            .search-bar input {
-                width: 90%;
-            }
-
-            nav ul {
-                flex-direction: column;
-                margin-top: 20px;
-            }
-
-            nav ul li {
-                margin: 10px 0;
-            }
-
-            footer a {
-                display: block;
-                margin: 10px 0;
-            }
-        }
-    </style>
-</head>
-
-<body>
-
-    <!-- Header -->
-    <header>
-        <h1>GIM Genius</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Cheats</a></li>
-                <li><a href="#">Mods</a></li>
-                <li><a href="#">Dev Tools</a></li>
-                <li><a href="#">Community</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <h2>Unlock Your Gaming Potential with Cheats, Mods & Dev Tools</h2>
-    </section>
-
-    <!-- Cheats and Mods Section -->
-    <section class="section">
-        <h2>Explore the Latest Cheats & Mods</h2>
-        <p>Find powerful cheats, cheats, and mods to elevate your gaming experience to the next level!</p>
-        <div class="cards">
-            <div class="card">
-                <h3>Latest Cheats</h3>
-                <p>Download the newest cheats for the most popular games, updated frequently.</p>
-            </div>
-            <div class="card">
-                <h3>Top Mods</h3>
-                <p>Transform your favorite games with the most downloaded mods created by the community.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Dev Tools Section -->
-    <section class="section">
-        <h2>Game Development Tools & Resources</h2>
-        <p>Access tutorials, tools, and scripts to help you create or mod your own games effortlessly.</p>
-        <div class="cards">
-            <div class="card">
-                <h3>Modding Tutorials</h3>
-                <p>Step-by-step tutorials to help you master the art of game modding.</p>
-            </div>
-            <div class="card">
-                <h3>Dev Tools & Scripts</h3>
-                <p>Download powerful tools and pre-written scripts to speed up your development process.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Search Bar -->
-    <div class="search-bar">
-        <input type="text" placeholder="Search for cheats, mods, or dev tools...">
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 GIM Genius. All Rights Reserved.</p>
-        <p>
-            <a href="/tos">Terms of Service</a>
-            <a href="/privacy">Privacy Policy</a>
-            <a href="/contactus">Contact Us</a>
-        </p>
-    </footer>
-
-    <script>
-        console.log("Welcome to GIM Genius! Enjoy exploring cheats, mods, and dev tools!");
-    </script>
-</body>
-
 </html>
